--- a/learnFlask/main_flask/templates/register.html
+++ b/learnFlask/main_flask/templates/register.html
@@ -2,6 +2,7 @@
 {% block content %}
     <div class="content-section">
         <form method="POST" action="">
+            <!-- ^^^^after posting go to the same route, post to the route-->
             {{ form.hidden_tag() }}
             <fieldset class="form-group">
                 <legend class="border-bottom mb-4">Join Today</legend>
