--- a/LearnDjango/UTips/UTipsApp/templates/UTipsApp/home.html
+++ b/LearnDjango/UTips/UTipsApp/templates/UTipsApp/home.html
@@ -1,11 +1,14 @@
 {% extends 'UTipsApp/base.html' %}
 {% block link %}
-			<a class="nav-item nav-link" href="{% url 'add-subject' %}">Add Subject</a>
-			<a class="nav-item nav-link" href="{% url 'add-topic' %}">Add Topic</a> 
+{% if user.is_authenticated %}
+	<a class="nav-item nav-link" href="{% url 'add-subject' %}">Add Subject</a>
+	<a class="nav-item nav-link" href="{% url 'add-topic' %}">Add Topic<a> 
+{% endif %}
 {% endblock link %}  
 {% block content %} 
 	{% for subject in subjects %}
 		<article class="media content-section">
+			<img class = "rounded-circle article-img" src="{{ subject.image.url }}">
 			<div class="media-body">
 				<div class="article-metadata">
 					<em><a class="mr-2" href="#">{{ subject.professor }}</a></em>
