--- a/LearnDjango/UTips/UTipsApp/templates/UTipsApp/topic.html
+++ b/LearnDjango/UTips/UTipsApp/templates/UTipsApp/topic.html
@@ -1,19 +1,28 @@
 {% extends 'UTipsApp/base.html' %} 
 {% block link %}
+{% if user.is_authenticated %}
 	<a class="nav-item nav-link" href="{% url 'edit-topic' topic.id %}">Edit Topic</a>
+{% endif %}
 {% endblock link %}
 {% block content %} 
 <h2>Topic: {{ topic.topic }}</h2>
-<h3>
-	<a href="{% url 'subject-details' subject.id %}"> ☜ Return to Topics</a>
-</h3>
+<br>
+<h4>
+	<a href="{% url 'subject-details' subject.id %}" style="color:rgb(42, 30, 53)">Topics👈</a>
+</h4>
 <br />
 <ul>
-	<strong>Professor:</strong>
-	<a href="#">{{ subject.professor }}</a>
-	<hr>
+	
+	<div class="article-metadata">
+		<strong>Professor:</strong>
+		<a href="#">{{ subject.professor }}</a>
+	</div>
+	<br>
 	<strong>Date:</strong>
 		{{ topic.date_shared|date:'M d, Y H:i' }}
+	<hr>
+	<strong>Author:</strong>
+		{{ topic.author }}
 	<hr>
 	<strong>Content:</strong>
 		{{ topic.text|linebreaks }}
