--- a/LearnDjango/UTips/UTipsApp/templates/UTipsApp/home.html
+++ b/LearnDjango/UTips/UTipsApp/templates/UTipsApp/home.html
@@ -1,8 +1,8 @@
 {% extends 'UTipsApp/base.html' %}
 {% block link %}
+	<a class="nav-item nav-link" href="{% url 'Ut-about' %}">About</a>
 {% if user.is_authenticated %}
-	<a class="nav-item nav-link" href="{% url 'add-subject' %}">Add Subject</a>
-	<a class="nav-item nav-link" href="{% url 'add-topic' %}">Add Topic<a> 
+	<a class="nav-item nav-link" href="{% url 'add-subject' %}">Add Subject</a> 
 {% endif %}
 {% endblock link %}  
 {% block content %} 
@@ -21,4 +21,35 @@
 	{% empty %}
 		<h2>🙊 Unfortunately, subjects are coming soon...</h2>
 	{% endfor %} 
-	{% endblock content %}
+{% endblock content %}
+{% block sidebar %}
+	<div class="col-md-4">
+		<div class="content-section" style="border-radius: 8px;">
+	     		{% if user.is_authenticated %}
+		  			<h3>User's Info</h3>
+		  			<p class='text-muted'>Current User's Activities for the last time.
+					<ul class="list-group" id = "sidebar_info">
+						<img class="rounded-circle account-img" src="{{ user.profile.image.url }}"">
+						<li class="list-group-item list-group-item-light"><strong>User:</strong> {{ user.username }}</li>
+						{% if topics %}
+							<li class="list-group-item list-group-item-light"><strong>Last Topic Added:</strong> {{ topics.0.topic }}</li> 
+							<li class="list-group-item list-group-item-light"><strong>On Date:</strong> {{ topics.0.date_shared }}</li>
+							<li class="list-group-item list-group-item-light"><strong>On Subject:</strong> {{ topics.0.subject }}</li>
+						{% else %}
+							<li class="list-group-item list-group-item-light"><em>Seems like you don't have any contributions</em></li>
+						{% endif %}
+		  		{% else %}
+		  			<h3>Overall Info</h3>
+		  			<p class='text-muted'>Quick overview of the things this website contains.
+					<ul class="list-group" id = "sidebar_info">
+						<li class="list-group-item list-group-item-light"><strong>Subjects:</strong> {{ subjects.count }}</li>
+						<li class="list-group-item list-group-item-light"><strong>Topics:</strong> {{ topics.count }}</li>	
+						<li class="list-group-item list-group-item-light"><strong>Last Topic Added:</strong> {{ topics.0.topic }}<br>
+											     						  <strong>Date:</strong> {{ topics.0.date_shared }}<br>
+											     						  <strong>Author:</strong> {{ topics.0.author }}</li>	
+				{% endif %}
+					</ul>
+		</div>
+	  </div>
+	</div>
+{% endblock sidebar %}
