--- a/LearnDjango/UTips/UTipsApp/templates/UTipsApp/topic_list.html
+++ b/LearnDjango/UTips/UTipsApp/templates/UTipsApp/topic_list.html
@@ -1,7 +1,8 @@
 {% extends 'UTipsApp/base.html' %} 
 {% block link %}
+	<a class="nav-item nav-link" href="{% url 'Ut-about' %}">About</a>
 {% if user.is_authenticated %}
-	<a class="nav-item nav-link" href="{% url 'add-topic' %}">Add Topic</a> 
+	<a class="nav-item nav-link" href="{% url 'add-topic' subject.id %}">Add Topic</a> 
 {% endif %}
 {% endblock link %} 
 {% block content %} 
@@ -34,3 +35,19 @@
 	{% endfor %}
 
 {% endblock content %}
+{% block sidebar %}
+	<div class="col-md-4">
+		<div class="content-section">
+		  <h3>Topic Info</h3>
+		  <p class='text-muted'>Quick overview of the topics this subject contains.
+			<ul class="list-group" id = "sidebar_info">
+					<li class="list-group-item list-group-item-light"><strong>Topics:</strong> {{ topics.count }}</li>	
+					<li class="list-group-item list-group-item-light"><strong>Last Topic Added:</strong> {{ topics.0.topic }}<br> 
+																	  <strong>On Date:</strong> {{ topics.0.date_shared }}<br>
+																	  <strong>Author:</strong> {{ topics.0.author }}</li>	
+			</ul>
+		  </p>
+		</div>
+	  </div>
+	</div>
+{% endblock sidebar %}
