--- a/LearnDjango/UTips/users/templates/users/logout.html
+++ b/LearnDjango/UTips/users/templates/users/logout.html
@@ -1,4 +1,7 @@
 {% extends 'UTipsApp/base.html' %} 
+{% block link %}
+    <a class="nav-item nav-link" href="{% url 'Ut-about' %}">About</a>
+{% endblock link %}
 {% block content %}
     <h2>Logged out</h2>
     <div class = "border-top pt-3">
