--- a/Django/UTips/UTipsApp/templates/UTipsApp/base.html
+++ b/Django/UTips/UTipsApp/templates/UTipsApp/base.html
@@ -16,6 +16,13 @@
     
 </head>
 <body>
+  <!-- {% block main-style %}
+    <style class = "back-wide">
+      body{
+        background-image: url("../../../media/back_main.jpg");
+      }
+    </style>
+  {% endblock %} -->
     <header class="site-header">
         <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
           <div class="container">
@@ -60,9 +67,11 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <footer>
-      
+    <footer class="desktop">
       <section class = "social">
+        <div id = "footer-text">
+          From a CSE Student at IUT <br>Phone: 93 916-96-44 <br>Gmail: jascinmamurov7@gmail.com
+        </div>
         <figure>
           <a href="https://www.linkedin.com/in/jmamurov"><img src="../../../media/linkedIn_logo_changed.png" alt="Linkedin profile of the programmer"></a>
         </figure>
@@ -76,7 +85,26 @@
           <a href="https://github.com/MJey16"><img src="../../../media/github_logo_changed.png" alt="GitHub profile of the programmer"></a>
         </figure>
       </section>
-      INHA University in Tashkent • Jasurbek Mamurov • CSE Student • 93 916-96-44 • jascinmamurov7@gmail.com
     </footer>
+    <footer class="tablet">
+      <section class = "social">
+        <div id = "footer-text">
+          From a CSE Student at IUT <br>Phone: 93 916-96-44 <br>Gmail: jascinmamurov7@gmail.com
+        </div>
+        <figure>
+          <a href="https://www.linkedin.com/in/jmamurov"><img src="../../../media/linkedIn_logo_changed.png" alt="Linkedin profile of the programmer"></a>
+        </figure>
+        <figure>
+          <a href="https://t.me/Jasurbek16"><img src="../../../media/telegram_logo_changed.png" alt="Telegram profile of the programmer"></a>
+        </figure>
+        <figure>
+          <a href="https://www.youtube.com/channel/UCIqxfNzc9zxXa4D5EqvLtdA"><img src="../../../media/youtube_logo_changed.png" alt="YouTube channel of the programmer"></a>
+        </figure>
+        <figure>
+          <a href="https://github.com/MJey16"><img src="../../../media/github_logo_changed.png" alt="GitHub profile of the programmer"></a>
+        </figure>
+      </section>
+    </footer>
+    
 </body>
 </html>
