--- a/Django/UTips/UTipsApp/templates/UTipsApp/topic_list.html
+++ b/Django/UTips/UTipsApp/templates/UTipsApp/topic_list.html
@@ -54,7 +54,7 @@
 
 {% endblock content %}
 {% block sidebar %}
-	<div class="col-md-4">
+	<div class="col-md-4" id = "sidebar-box">
 		<div class="content-section">
 		  <h3>Topic Info</h3>
 		  <p class='text-muted'>Quick overview of the topics this subject contains.
