--- a/Django/UTips/UTipsApp/static/UTipsApp/main.css
+++ b/Django/UTips/UTipsApp/static/UTipsApp/main.css
@@ -1,10 +1,13 @@
-body {
-    background: #428bca;
-    background-image: url(../../../media/background.jpg);
+  body {
+    background: #5c84a7;
+    background-image: url('../../../media/back_main.jpg');
     background-repeat: no-repeat;
-    background-size: 100%;
+    background-size: cover;
     background-position: center;
-    background-position: 50%, 50%;
+    background-attachment: fixed;
+    display:flex;
+    flex-direction:column;
+    min-height: 105vh;
     padding: 3em;
     color: #333333;
     margin-top: 5rem;
@@ -16,61 +19,16 @@ body {
     font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
   }
   
+  main{
+    flex-grow: 1;
+  }
+  
   ul {
     margin: 0;
   }
   
-  main{
-    min-height: 100vh;
-    margin-bottom: -100px;
-  }
-
-  footer {
-    background:rgba(255, 255, 255, 0.274);
-    color: rgb(218, 210, 210);
-    font-size: 20px;
-    text-align: center;
-  }
-  footer {
-    height: 100px;
-  }
-    
-  .social {
-    padding: 20px;
-    display: flex;
-    flex-direction: row;
-  }
-
-  .social figure {
-    margin:auto;
-    width: 50px;
-  }
-
-  .social figure img {    
-    border: 1px solid white;
-    border-radius: 50%;
-    box-shadow: gray 0 0 10px;
-    width: 40px;
-  }
-
-  #profile-logo {
-    background-image: url("../../../media/profile_logo.png");
-    background-size: 41px;
-    background-repeat: no-repeat;
-    border-radius: 50%;
-    border: 1px solid white;
-    display:inline-block;
-    text-indent: -9999999px;
-    width:41px;
-  }
-
-  #sidebar_info li {
-    border-radius: 15px;
-    background-color: rgba(240, 248, 255, 0.055);    
-  }
-
   .bg-steel {
-    background-color: #605f8ac5;
+    background-color: #31829b67;
   }
   
   .site-header .navbar-nav .nav-link {
@@ -84,9 +42,9 @@ body {
   .site-header .navbar-nav .nav-link.active {
     font-weight: 500;
   }
-  
+
   .content-section {
-    background: #ffffffb6;
+    background: #ffffffc7;
     padding: 10px 20px;
     border: 1px solid #dddddd;
     border-radius: 30px;
@@ -123,6 +81,7 @@ body {
     text-decoration: none;
   }
   
+
   .article-svg {
     width: 25px;
     height: 25px;
@@ -138,4 +97,147 @@ body {
   
   .account-heading {
     font-size: 2.5rem;
+  }
+  
+  
+  #id_bio {
+    width: 100%;
+    height: 100px;
+  }
+  
+  #profile-logo {
+    background-image: url("../../../media/profile_logo.png");
+    background-size: 41px;
+    background-repeat: no-repeat;
+    border-radius: 50%;
+    border: 1px solid white;
+    display:inline-block;
+    text-indent: -9999999px;
+    width:41px;
+  }
+  
+  #sidebar_info li {
+    border-radius: 15px;
+    background-color: rgba(240, 248, 255, 0.055);    
+  }
+  
+  footer {
+    background:rgba(49, 46, 46, 0.555);
+  }
+  
+  footer section figure a img:hover {
+    transform: translateY(-10px);
+    box-shadow: rgb(105, 193, 219) 0 0 22px;
+  }
+
+  .social {
+    padding: 20px;
+    display: flex;
+    flex-direction: row;
+  }
+  
+  .social figure {
+    position: relative;
+    margin:10px;
+    width: 45px;
+    top: 30px;
+    left: 60%;
+  }
+  
+  .social figure img {    
+    border-radius: 50%;
+    box-shadow: gray 0 0 10px;
+    width: 40px;
+  }
+  
+  #footer-text{
+    font-size: 18px;
+    height: 10%;
+    color: rgba(243, 222, 228, 0.781);
+    position:relative;
+    left:1%;
+  }
+
+  .tablet {
+    display: none;
+  }
+  
+  @media screen and (max-width: 1340px) {
+    
+    .tablet {
+      display: flex;
+    }
+
+    .bg-steel {
+      background-color: #116e8a;
+    }
+
+    footer {
+      background:rgba(49, 46, 46, 0.555);
+      height: 250px;
+    }
+
+    #footer-text{
+      font-size: 20px;
+      height: 1%;
+      color: rgba(243, 222, 228, 0.781);
+      position:relative;
+      left: 25%;
+      top: 25px;
+    }
+
+    .social figure {
+      position: relative;
+      margin:10px;
+      width: 35px;
+      top: 110px;
+      left: 255px;
+    }
+
+    .desktop {
+      display: none;
+    }
+  }
+
+  @media screen and (max-width: 1064px) {
+  
+    .tablet {
+      display: block;
+    }
+
+    #footer-text{
+      font-size: 20px;
+      color: rgba(243, 222, 228, 0.781);
+      position:relative;
+      left: 22%;
+      top: 25px;
+    }
+
+    .social figure {
+      position: relative;
+      margin:10px;
+      width: 35px;
+      top: 170px;
+      left: -135px;
+    }
+
+    #sidebar-box {
+      position: relative;
+      left: 70px;
+      width: 350px;  
+    }
+
+
+    .content-section {
+      background: #ffffffc7;
+      padding: 10px 20px;
+      border: 1px solid #dddddd;
+      border-radius: 50px;
+      margin-bottom: 20px;
+    }
+
+    .desktop {
+      display: none;
+    }
+    
   }
