--- a/Django/UTips/UTipsApp/templates/UTipsApp/user_topics.html
+++ b/Django/UTips/UTipsApp/templates/UTipsApp/user_topics.html
@@ -46,7 +46,7 @@
 
 {% endblock content %}
 {% block sidebar %}
-	<div class="col-md-4">
+	<div class="col-md-4" id = "sidebar-box">
 		<div class="content-section" style="border-radius: 8px;">
 	     		{% if user.is_authenticated %}
 		  			<h3>User's Info</h3>
