--- a/Django/UTips/UTipsApp/static/UTipsApp/main.css
+++ b/Django/UTips/UTipsApp/static/UTipsApp/main.css
@@ -44,9 +44,12 @@
   }
 
   .content-section {
-    background: #ffffffc7;
+    background: linear-gradient(
+      to right bottom, 
+    rgba(255,255,255,0.7), 
+    rgba(255,255,255,0.3));
     padding: 10px 20px;
-    border: 1px solid #dddddd;
+    border: 1px solid #dddddd81;
     border-radius: 30px;
     margin-bottom: 20px;
   }
