add tags and reviews

--- a/Django/MySite/templates/navbar.html
+++ b/Django/MySite/templates/navbar.html
@@ -1,5 +1,5 @@
 <h1>Logo</h1>
 <a href="/">Home</a>
-<a href="/my_projects/project/1">Project</a>
-<a href="/my_projects/projects">Projects</a>
+<a href="#">Education</a>
+<a href="{% url 'allProjects' %}">Projects</a>
 <hr>
