--- a/Django/MySite/Projects/templates/Projects/project.html
+++ b/Django/MySite/Projects/templates/Projects/project.html
@@ -3,8 +3,24 @@
 {% block content %}
 <h1>Single Project</h1>
 <hr>
+
 <h2>Project Name</h2>
 <p>{{ project.title }}</p>
+<hr>
+
 <h2>Description</h2>
 <p>{{project.description}}</p>
+<hr>
+
+<h2>Tags</h2>
+{% for tag in project.tag.all %}
+    <span style="border: 1px solid #888;padding: 1em;">{{tag}}</span>
+{% endfor %}
+<hr>
+
+<h2>Reviews</h2>
+{% for review in project.review_set.all %}
+<p><b>{{review.created}}</b><br><em>{{review.body}}</em></p>
+{% endfor %}
+
 {% endblock content %}
