--- a/Django/MySite/Projects/templates/Projects/projects.html
+++ b/Django/MySite/Projects/templates/Projects/projects.html
@@ -6,7 +6,6 @@
 <table>
     <thead>
         <tr>
-            <th>ID</th>
             <th>Title</th>
             <th>Description</th>
         </tr>
@@ -14,8 +13,7 @@
     <tbody>
         {% for project in projects %}
         <tr>
-            <td>{{project.id}}</td>
-            <td>{{project.title}}</td>
+            <td><a link href="{% url 'singleProject' project.id %}">{{project.title}}</a></td>
             <td>{{project.description}}</td>
         </tr>
         {% endfor %}
