can add a project

--- a/Django/MySite/Projects/templates/Projects/projects.html
+++ b/Django/MySite/Projects/templates/Projects/projects.html
@@ -1,6 +1,8 @@
 {% extends 'main.html' %}
 
 {% block content %}
+<a href="{% url 'create-project' %}">Add a Project</a>
+<hr>
 <h1>Projects</h1>
 <hr>
 <table>
