delete and update complete

--- a/Django/MySite/Projects/templates/Projects/projects.html
+++ b/Django/MySite/Projects/templates/Projects/projects.html
@@ -10,6 +10,8 @@
         <tr>
             <th>Title</th>
             <th>Description</th>
+            <th></th>
+            <th></th>
         </tr>
     </thead>
     <tbody>
@@ -17,6 +19,8 @@
         <tr>
             <td><a link href="{% url 'singleProject' project.id %}">{{project.title}}</a></td>
             <td>{{project.description}}</td>
+            <td><a href="{% url 'update-project' project.id %}">Edit</a></td>
+            <td><a href="{% url 'delete-project' project.id %}">Delete</a></td>
         </tr>
         {% endfor %}
     </tbody>
