add static files

--- a/Django/MySite/Projects/templates/Projects/projects.html
+++ b/Django/MySite/Projects/templates/Projects/projects.html
@@ -1,8 +1,9 @@
 {% extends 'main.html' %}
-
+{% load static %}
 {% block content %}
 <a href="{% url 'create-project' %}">Add a Project</a>
 <hr>
+<img style = "width: 75%;" src="{% static 'images/Let\'s build the future today....png'%}" alt="my own intro text">
 <h1>Projects</h1>
 <hr>
 <table>
