--- a/Django/MySite/Projects/templates/Projects/project.html
+++ b/Django/MySite/Projects/templates/Projects/project.html
@@ -2,16 +2,90 @@
 
 {% block content %}
 
-<img src="{{project.imageURL}}" style="max-width: 500px;">
-<h1>{{ project.title }}</h1>
-<p>{{project.description}}</p><br>
-{% for tag in project.tag.all %}
-<span style="border: 1px solid #888;padding: 1em;">{{tag}}</span>
-{% endfor %}<br><br>
-<hr>
-<h2>Reviews</h2>
-{% for review in project.review_set.all %}
-<p><b>{{review.created}}</b><br><em>{{review.body}}</em></p>
-{% endfor %}
+<!-- Main Section -->
+<main class="singleProject my-md">
+    <div class="container">
+        <div class="layout">
+            <div class="column column--1of3">
+                <h3 class="singleProject__subtitle">Tools & Stacks</h3>
+                <div class="singleProject__toolStack">
+                    {% for tag in project.tags.all %}
+                    <span class="tag tag--pill tag--sub tag--lg">
+                        <small>{{tag.name}}</small>
+                    </span>
+                    {% endfor %}
+                </div>
+                {% if project.source_code %}
+                <a class="singleProject__liveLink" href="{{project.source_code}}" target="_blank"><i
+                        class="im im-external-link"></i>Source Code (GitHub)
+                </a>
+                {% endif %}
+                <br>
+                {% if project.link %}
+                <a class="singleProject__liveLink" href="{{project.link}}" target="_blank"><i
+                        class="im im-external-link"></i>Want to test it?</a>
+                {% endif %}
+            </div>
+            <div class="column column--2of3">
+                <img class="singleProject__preview" src="{{project.imageURL}}"
+                    alt="The image of the project called {{project.title}}" />
+                <a href="" class="singleProject__developer">{{project.author}}</a>
+                <h2 class="singleProject__title">{{project.title}}</h2>
+                <h3 class="singleProject__subtitle">About the Project</h3>
+                <div class="singleProject__info">{{project.description|linebreaksbr}}</div>
+                <div class="comments">
+                    <h3 class="singleProject__subtitle">Feedback</h3>
+                    <h5 class="project--rating">
+                        {{project.vote_ratio}}% Positive Feedback ({{project.vote_total}} Votes)
+                    </h5>
+
+                    <form class="form" action="#" method="POST">
+                        <!-- Textarea -->
+                        <div class="form__field">
+                            <label for="formInput#textarea">Comments: </label>
+                            <textarea class="input input--textarea" name="message" id="formInput#textarea"
+                                placeholder="Write your comments here..."></textarea>
+                        </div>
+                        <input class="btn btn--sub btn--lg" type="submit" value="Comments" />
+                    </form>
+                    <div class="commentList">
+                        <div class="comment">
+                            <a href="profile.html">
+                                <img class="avatar avatar--md"
+                                    src="https://pbs.twimg.com/profile_images/1335382240931368961/b3wSZKj4_400x400.jpg"
+                                    alt="user" />
+                            </a>
+                            <div class="comment__details">
+                                <a href="profile.html" class="comment__author">Sulamita Ivanov</a>
+                                <p class="comment__info">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit alias numquam
+                                    perferendis
+                                    mollitia minus minima exercitationem possimus ab deserunt qui, soluta iusto
+                                    doloribus eveniet
+                                    similique consequuntur ratione, dignissimos ut magni laborum quo.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="comment">
+                            <a href="profile.html">
+                                <img class="avatar avatar--md" src="https://avatars.githubusercontent.com/u/33843378"
+                                    alt="user" />
+                            </a>
+                            <div class="comment__details">
+                                <a href="profile.html" class="comment__author">Dennis Ivanov</a>
+                                <p class="comment__info">
+                                    Consectetur adipisicing elit. Reprehenderit alias numquam perferendis mollitia minus
+                                    minima
+                                    exercitationem possimus ab deserunt qui, ratione, dignissimos ut magni laborum quo.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    </div>
+</main>
 
 {% endblock content %}
