--- a/Django/MySite/Education/templates/Education/education.html
+++ b/Django/MySite/Education/templates/Education/education.html
@@ -1,4 +1,8 @@
+{% extends 'main.html' %}
+{% load static %}
 
+{% block content %}
 <h1>Education</h1>
 
 <p>Hello, you are in the education page :)</p>
+{% endblock content %}
