--- a/Django/MySite/Projects/templates/Projects/projects.html
+++ b/Django/MySite/Projects/templates/Projects/projects.html
@@ -1,29 +1,65 @@
 {% extends 'main.html' %}
 {% load static %}
+
 {% block content %}
-<a href="{% url 'create-project' %}">Add a Project</a>
-<hr>
-<img style="width: 40%;" src="{% static 'images/Let\'s build the future today....png'%}" alt="my own intro text">
-<h1>Projects</h1>
-<hr>
-<table>
-    <thead>
-        <tr>
-            <th>Title</th>
-            <th>Description</th>
-            <th></th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        {% for project in projects %}
-        <tr>
-            <td><a link href="{% url 'singleProject' project.id %}">{{project.title}}</a></td>
-            <td>{{project.description}}</td>
-            <td><a href="{% url 'update-project' project.id %}">Edit</a></td>
-            <td><a href="{% url 'delete-project' project.id %}">Delete</a></td>
-        </tr>
-        {% endfor %}
-    </tbody>
-</table>
+
+<!-- Main Section -->
+<main class="projects">
+    <section class="hero-section text-center">
+        <div class="container container--narrow">
+            <div class="hero-section__box">
+                <h2>Search for <span>Projects</span></h2>
+            </div>
+
+            <div class="hero-section__search">
+                <form class="form" action="#" method="get">
+                    <div class="form__field">
+                        <label for="formInput#search">Search By Projects </label>
+                        <input class="input input--text" id="formInput#search" type="text" name="text"
+                            placeholder="Search by Project Title" />
+                    </div>
+
+                    <input class="btn btn--sub btn--lg" type="submit" value="Search" />
+                </form>
+            </div>
+        </div>
+    </section>
+
+
+    <!-- Search Result: DevList -->
+    <section class="projectsList">
+        <div class="container">
+            <div class="grid grid--three">
+
+
+                {% for project in projects %}
+                <div class="column">
+                    <div class="card project">
+                        <a href="{% url 'singleProject' project.id %}" class="project">
+                            <img class="project__thumbnail" src="{{ project.imageURL}}"
+                                alt="A thumbnail for the project called {{ project.title }}" />
+                            <div class="card__body">
+                                <h3 class="project__title">{{project.title}}</h3>
+                                <p><a class="project__author" href="">{{project.author}}</a></p>
+                                <p class="project--rating">
+                                    <span style="font-weight: bold;">{{project.vote_ratio}}%</span> Positive
+                                    Feedback ({{project.vote_total}} Votes)
+                                </p>
+                                <div class="project__tags">
+                                    {% for tag in project.tags.all %}
+                                    <span class="tag tag--pill tag--main">
+                                        <small>{{tag.name}}</small>
+                                    </span>
+                                    {% endfor %}
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                {% endfor %}
+            </div>
+        </div>
+    </section>
+</main>
+
 {% endblock content %}
