--- a/Django/MySite/templates/main.html
+++ b/Django/MySite/templates/main.html
@@ -1,32 +1,33 @@
 <!DOCTYPE html>
 {% load static %}
 <html>
-
-<head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Jasurbek Mamurov</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='{% static "styles/main.css" %}'>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <link rel="stylesheet" href="https://cdn.iconmonstr.com/1.3.0/css/iconmonstr-iconic-font.min.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nunito:wght@500&family=Sora&display=swap"
+      rel="stylesheet"
+    />
+
+    <link
+      rel="stylesheet"
+      href="https://cdn.iconmonstr.com/1.3.0/css/iconmonstr-iconic-font.min.css"
+    />
     <!-- Mumble UI -->
     <link rel="stylesheet" href="{% static 'uikit/styles/uikit.css' %}" />
 
     <link rel="stylesheet" href="{% static 'styles/app.css' %}" />
     <!-- <script src='main.js' ></script> -->
-    <style>
-    </style>
-</head>
+    <style></style>
+  </head>
 
-<body>
-
-    {% include 'navbar.html' %}
-
-    {% block content %}
-    {% endblock content %}
-
-    {% include 'footer.html' %}
-</body>
-
+  <body>
+    {% include 'navbar.html' %} {% block content %} {% endblock content %}
+    {%include 'footer.html' %}
+  </body>
 </html>
